<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.noah.npardon.ui.Connexion">


    <TextView
        android:id="@+id/tvConnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/nameConnexion"
        android:textColor="@color/pink1"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgBaldMan2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:src="@drawable/baldman"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvConnexion" />

    <EditText
        android:id="@+id/txLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="@drawable/input_background"
        android:drawableLeft="@drawable/aperson"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/txLogin"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/pink1"
        android:textColorHint="@color/pink1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBaldMan2" />

    <EditText
        android:id="@+id/txPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/input_background"
        android:drawableLeft="@drawable/security"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/txPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/pink1"
        android:textColorHint="@color/pink1"
        app:layout_constraintEnd_toEndOf="@+id/txLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txLogin"
        app:layout_constraintTop_toBottomOf="@+id/txLogin" />

    <Button
        android:id="@+id/bConnexion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_background"
        android:text="@string/bConnexion"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/txPassword"
        app:layout_constraintStart_toStartOf="@+id/txPassword"
        app:layout_constraintTop_toBottomOf="@+id/txPassword" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/bConnexion"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/bConnexion"
        app:layout_constraintTop_toBottomOf="@+id/bConnexion">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/txInscription"
            android:textColor="@color/pink3" />

        <TextView
            android:id="@+id/txClickInscription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:paddingLeft="8dp"
            android:text="@string/txClickInscription"
            android:textColor="@color/pink2" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>