<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.noah.npardon.ui.Inscription">


    <Button
        android:id="@+id/bAnnuler"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_background"
        android:text="@string/bAnnuler"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bInscription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_background"
        android:text="@string/bInscription"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/bAnnuler"
        app:layout_constraintEnd_toEndOf="@+id/bAnnuler"
        app:layout_constraintStart_toStartOf="@+id/bAnnuler" />

    <TextView
        android:id="@+id/tvInscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/bInscription"
        android:textColor="@color/pink1"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="@drawable/input_background"
        android:drawableLeft="@drawable/aperson"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/txLogin"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/pink1"
        android:textColorHint="@color/pink1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInscription" />

    <EditText
        android:id="@+id/txPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/input_background"
        android:drawableLeft="@drawable/security"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/txPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/pink1"
        android:textColorHint="@color/pink1"
        app:layout_constraintEnd_toEndOf="@+id/txLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txLogin"
        app:layout_constraintTop_toBottomOf="@+id/txLogin" />
    <EditText
        android:id="@+id/txVerifPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/input_background"
        android:drawableLeft="@drawable/security"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/txVerifPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/pink1"
        android:textColorHint="@color/pink1"
        app:layout_constraintEnd_toEndOf="@+id/txPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txPassword"
        app:layout_constraintTop_toBottomOf="@+id/txPassword" />

    <EditText
        android:id="@+id/txLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/input_background"
        android:drawableLeft="@drawable/aperson"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/txLastName"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/pink1"
        android:textColorHint="@color/pink1"
        app:layout_constraintEnd_toEndOf="@+id/txVerifPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txVerifPassword"
        app:layout_constraintTop_toBottomOf="@+id/txVerifPassword" />

    <EditText
        android:id="@+id/txFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/input_background"
        android:drawableLeft="@drawable/aperson"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/txName"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/pink1"
        android:textColorHint="@color/pink1"
        app:layout_constraintEnd_toEndOf="@+id/txLastName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txLastName"
        app:layout_constraintTop_toBottomOf="@+id/txLastName" />

    <EditText
        android:id="@+id/txDDN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/input_background"
        android:drawableLeft="@drawable/birth_date"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/txDDN"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/pink1"
        android:textColorHint="@color/pink1"
        app:layout_constraintEnd_toEndOf="@+id/txFirstName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txFirstName"
        app:layout_constraintTop_toBottomOf="@+id/txFirstName" />

    <EditText
        android:id="@+id/txMail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/input_background"
        android:drawableLeft="@drawable/mail"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/txMail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/pink1"
        android:textColorHint="@color/pink1"
        app:layout_constraintEnd_toEndOf="@+id/txDDN"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txDDN"
        app:layout_constraintTop_toBottomOf="@+id/txDDN" />


</androidx.constraintlayout.widget.ConstraintLayout>